Fixed right side overflow on input focus for editPrice.html

--- a/Website/css/dynamictable.css
+++ b/Website/css/dynamictable.css
@@ -23,7 +23,7 @@
 
 .wrapper input:focus {
     transition: 300ms ease-in-out;
-    transform: scale(1.05);
+    transform: scale(1.01);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
